--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,5 @@
+title: Metadata Digger Bundle
+logo: /assets/img/logo.png
+description: Scalable Metadata extraction and analysis.
+show_downloads: true
 theme: jekyll-theme-minimal
